@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2009 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,5 +43,13 @@ import org.springframework.http.converter.HttpMessageConverter;
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
 public @interface RequestBody {
+
+	/**
+	 * Whether body content is required.
+	 * <p>Default is <code>true</code>, leading to an exception thrown in case
+	 * there is no body content. Switch this to <code>false</code> if you prefer
+	 * <code>null</value> to be passed when the body content is <code>null</code>.
+	 */
+	boolean required() default true;
 
 }
